--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,16 +97,16 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Test Link"
-                    android:id="@+id/button_testlink"
+                    android:text="MongoPrefs"
+                    android:id="@+id/button_MongoPrefs"
                     style="?android:attr/buttonStyleSmall"
-                    android:onClick="wakeCarelink"
-                    android:layout_below="@+id/frameLayout" />
+                    android:layout_below="@+id/frameLayout"
+                    android:onClick="launchMongoDBSettingsActivity" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Check Pump"
+                    android:text="TestPump"
                     android:id="@+id/button_verifyPumpCommunications"
                     android:onClick="verifyPumpCommunications"
                     android:layout_alignTop="@+id/button_testlink"
