added zzZ sleep timer to MonitorActivity, added IOB/COB data reading and calculations

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TestPump"
+                    android:text="Test Link"
                     android:id="@+id/button_verifyPumpCommunications"
                     android:onClick="verifyPumpCommunications"
                     android:layout_alignTop="@+id/button_testlink"
