--- a/app/src/main/res/layout/activity_utility.xml
+++ b/app/src/main/res/layout/activity_utility.xml
@@ -37,6 +37,17 @@
                 android:onClick="getHistoryButtonClicked" />
         </LinearLayout>
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView_logWindow"
+            android:nestedScrollingEnabled="false"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center_horizontal"
+            android:footerDividersEnabled="false"
+            android:headerDividersEnabled="false" />
+
     </LinearLayout>
 
 </RelativeLayout>
