--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
@@ -17,7 +17,7 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="39dp">
+            android:layout_height="32dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -27,19 +27,20 @@
                 android:id="@+id/textView_Label_LastBGReadTime" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="-- min ago"
                 android:id="@+id/textView_LastBGReadTime"
-                android:layout_marginLeft="50dp" />
+                android:gravity="right"
+                android:layout_gravity="right" />
 
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="39dp">
+            android:layout_height="32dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -49,18 +50,19 @@
                 android:id="@+id/textView_Label_LatestBG" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="--- mg/dL"
                 android:id="@+id/textView_LatestBG"
-                android:layout_marginLeft="100dp" />
+                android:layout_gravity="right"
+                android:gravity="right" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="39dp">
+            android:layout_height="32dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -70,18 +72,20 @@
                 android:id="@+id/textView_Label_IOB" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="1.2U"
+                android:text="--- U"
                 android:id="@+id/textView_IOB"
-                android:layout_marginLeft="100dp" />
+                android:layout_gravity="right"
+                android:gravity="right"
+                />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="40dp">
+            android:layout_height="32dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -91,19 +95,21 @@
                 android:id="@+id/textView_Label_COB" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="2.4gm"
+                android:text="--- gm"
                 android:id="@+id/textView_COB"
-                android:layout_marginLeft="100dp" />
+                android:layout_gravity="right"
+                android:gravity="right"
+                />
 
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="41dp"
+            android:layout_height="32dp"
             android:layout_gravity="center_vertical">
 
             <TextView
@@ -114,18 +120,63 @@
                 android:id="@+id/textView_Label_CurrentBasal" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="5.4 U/hr"
+                android:text="--- U/hr"
                 android:id="@+id/textView_CurrentBasal"
-                android:layout_marginLeft="30dp" />
+                android:layout_gravity="right"
+                android:gravity="right"
+                />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="40dp">
+            android:layout_height="32dp"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Temp Basal:"
+                android:id="@+id/textView_TempBasal_Label"
+                android:layout_gravity="left" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="right"
+                android:layout_gravity="right">
+
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="--- U/hr"
+                    android:id="@+id/textView_TempBasalRate"
+                    android:layout_gravity="right"
+                    android:gravity="right" />
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="-- min"
+                    android:id="@+id/textView_TempBasalMinRemaining"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="32dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -135,12 +186,14 @@
                 android:id="@+id/textView_Label_PredBG" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="151 mg/dL"
+                android:text="--- mg/dL"
                 android:id="@+id/textView_PredBG"
-                android:layout_marginLeft="80dp" />
+                android:layout_gravity="right"
+                android:gravity="right"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -163,19 +216,21 @@
                 android:visibility="invisible" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Sleep"
                 android:id="@+id/textView_SleepNotification"
                 android:visibility="invisible"
-                android:layout_marginLeft="30dp" />
+                android:layout_gravity="right"
+                android:gravity="right"
+                />
 
         </LinearLayout>
 
         <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:footerDividersEnabled="false"
             android:headerDividersEnabled="false"
             android:id="@+id/listView_MonitorMsgs" />
