--- a/app/src/main/res/layout/activity_personal_profile.xml
+++ b/app/src/main/res/layout/activity_personal_profile.xml
@@ -20,38 +20,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Sensitivity (ISF)"
-                android:id="@+id/textView_ISF" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:id="@+id/editText_ISF"
-                android:layout_weight="1"
-                android:hint="45.0"
-                android:minWidth="50dp"
-                android:gravity="right"
-                android:singleLine="true" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Set"
-                android:id="@+id/button_SetISF"
-                android:onClick="editISFChanged" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Absorption (CAR)"
                 android:id="@+id/textView_CAR" />
 
@@ -72,6 +40,126 @@
                 android:text="Set"
                 android:id="@+id/button_SetCAR"
                 android:onClick="editCARChanged" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="BG Target max:"
+                android:id="@+id/textView_Label_BGMax" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:id="@+id/editText_BGMax"
+                android:layout_weight="1"
+                android:hint="125"
+                android:gravity="right"
+                android:singleLine="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Set"
+                android:id="@+id/button_SetBGMax"
+                android:onClick="setBGMaxClicked" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="BG Target (mg/dL):"
+                android:id="@+id/textView_Label_TargetBG" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:id="@+id/editText_TargetBG"
+                android:layout_weight="1"
+                android:hint="115"
+                android:gravity="right"
+                android:singleLine="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Set"
+                android:id="@+id/button_SetTargetBG"
+                android:onClick="setTargetBGClicked" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="BG Target min:"
+                android:id="@+id/textView_Label_BGMin" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:id="@+id/editText_BGMin"
+                android:layout_weight="1"
+                android:hint="95"
+                android:gravity="right"
+                android:singleLine="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Set"
+                android:id="@+id/button_SetBGMin"
+                android:onClick="setBGMinClicked" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Max Tmp Basal Rate:"
+                android:id="@+id/textView_Label_MaxTmpBasalRate" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:id="@+id/editText_MaxTmpBasalRate"
+                android:layout_weight="1"
+                android:hint="6.1"
+                android:gravity="right"
+                android:singleLine="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Set"
+                android:id="@+id/button_SetMaxTmpBasalRate"
+                android:onClick="setMaxTmpBasalRateClicked" />
         </LinearLayout>
     </LinearLayout>
 
