--- a/app/src/main/res/layout/activity_personal_profile.xml
+++ b/app/src/main/res/layout/activity_personal_profile.xml
@@ -161,6 +161,38 @@
                 android:id="@+id/button_SetMaxTmpBasalRate"
                 android:onClick="setMaxTmpBasalRateClicked" />
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Low BG Suspend:"
+                android:id="@+id/textView_LowBGSuspend"
+                android:singleLine="true" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:id="@+id/editText_LowBGSuspend"
+                android:layout_weight="1"
+                android:hint="85.0"
+                android:gravity="right"
+                android:singleLine="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Set"
+                android:id="@+id/button_SetLowBGSuspend"
+                android:onClick="editLowBGSuspendClicked" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
