added persistant value storage (via SharedPreferences) to more easily shared data around Roundtrip.  Added setting to disable writes to the MongoDB.

--- a/app/src/main/res/layout/activity_mongo_dbsettings.xml
+++ b/app/src/main/res/layout/activity_mongo_dbsettings.xml
@@ -147,6 +147,29 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Allow writing to DB"
+                android:id="@+id/textView_allowWritingToDB"
+                android:layout_gravity="bottom" />
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:id="@+id/checkBox_allowWritingToDB"
+                android:layout_marginLeft="20dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <Button
